--- a/style.css
+++ b/style.css
@@ -1,34 +1,105 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+/* css reset */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "oswald", sans-serif;
 }
-img{
+
+img {
     width: 100%;
 }
 
-body {
-  height: 100vh;
-  width: 100vw;
-  background-color: black;
-  margin: 0rem;
-  overflow: hidden;
+/* main */
+main {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+    margin: 0rem;
+    overflow: hidden;
 }
 
 #image-track {
-  display: flex;
-  gap: 4vmin;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(0%, -50%); 
-  user-select: none;
+    display: flex;
+    gap: 4vmin;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-100%, -50%);
+    user-select: none;
 }
 
-#image-track > .image {
-  width: 40vmin;
-  height: 56vmin;
-  object-fit: cover;
-  object-position: 100% center;
+#image-track>.image {
+    width: 40vmin;
+    height: 56vmin;
+    object-fit: cover;
+    object-position: 0% center;
+    border-radius: 15px;
 }
 
+h1 {
+    font-size: 45px;
+    font-weight: 600;
+    background: linear-gradient(to right, purple, blue);
+    background-clip: text;
+    color: transparent;
+}
+
+.topptekst {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 10px;
+    top: 3%;
+    left: 1%;
+    border-bottom: 2px solid white;
+}
+
+
+
+.fa-solid {
+    font-size: 60px;
+    background: linear-gradient(to left, purple, blue);
+    background-clip: text;
+    color: transparent;
+}
+
+/* burgermeny */
+#burgerMeny {
+    position: absolute;
+    top: 5%;
+    right: 3%;
+    cursor: pointer;
+}
+
+#clMeny {
+    display: none !important;
+    position: absolute;
+    top: 10%;
+    right: 4%;
+    background-color: rgba(0, 0, 50, 0.9);
+    padding: 10px 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#clMeny a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    transition: 0.3s;
+}
+
+#clMeny a:hover {
+    color: #8a2be2;
+}
+
+#clMeny.vis{
+    display: flex !important;
+}
