--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "oswald", sans-serif;
 }
 
 img {
@@ -13,6 +12,10 @@ img {
 }
 
 /* main */
+body{
+     font-family: "oswald", sans-serif;
+}
+
 main {
     height: 100vh;
     width: 100vw;
