--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ img {
 }
 
 /* main */
-body{
-     font-family: "oswald", sans-serif;
+body {
+    font-family: "oswald", sans-serif;
 }
 
 main {
@@ -60,9 +60,8 @@ h1 {
     top: 3%;
     left: 1%;
     border-bottom: 2px solid white;
+    background-color: rgba(1, 1, 99, 0.8);
 }
-
-
 
 .fa-solid {
     font-size: 60px;
@@ -72,24 +71,28 @@ h1 {
 }
 
 /* burgermeny */
-#burgerMeny {
+.indexBurger {
     position: absolute;
-    top: 5%;
+    top: 6%;
     right: 3%;
+}
+
+.burgerMeny {
     cursor: pointer;
 }
 
 #clMeny {
     display: none !important;
     position: absolute;
-    top: 10%;
-    right: 4%;
+    top: 7%;
+    right: 7%;
     background-color: rgba(0, 0, 50, 0.9);
     padding: 10px 20px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    z-index: 100;
 }
 
 #clMeny a {
@@ -103,6 +106,175 @@ h1 {
     color: #8a2be2;
 }
 
-#clMeny.vis{
+#clMeny.vis {
     display: flex !important;
+}
+
+/* style til sider */
+.bakgrunn {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.3;
+    z-index: -1;
+}
+
+.content {
+    position: relative;
+    z-index: 1;
+    color: white;
+}
+
+h3 {
+    font-size: 50px;
+    background: linear-gradient(to left, purple, blue);
+    background-clip: text;
+    color: transparent;
+}
+
+.topp {
+    padding: 30px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fa-house {
+    background: linear-gradient(to right, purple, blue);
+    background-clip: text;
+    color: transparent;
+}
+
+.AV {
+    background: linear-gradient(to right, rgb(162, 1, 162), blue);
+}
+
+.vinnere {
+    width: 40%;
+    margin: 10px;
+    border: 2px solid white;
+}
+
+.sesonginfo {
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 15px;
+    border-radius: 15px;
+    max-width: 600px;
+}
+
+.sesonginfo h2 {
+    margin-top: 20px;
+    font-size: 24px;
+    color: #fff;
+}
+
+.sesonginfo p {
+    font-size: 18px;
+    line-height: 1.8;
+}
+
+.sideInnhold {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+/* faktaboks */
+.fakta-boks {
+    margin: 15px;
+    top: 15%;
+    left: 45%;
+    z-index: 20;
+}
+
+.fakta {
+    font-size: 20px;
+}
+
+.fakta-minimal {
+    background-color: rgba(1, 1, 101, 0.8);
+    color: white;
+    padding: 10px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    font-weight: 500;
+}
+
+.fakta-minimal {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+}
+
+
+.fakta-full {
+    background-color: rgba(0, 1, 9, 0.95);
+    color: white;
+    width: 600px;
+    max-height: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    border-radius: 12px;
+    padding: 0px 20px;
+    transition: max-height 0.5s ease-in-out, padding 0.3s;
+    position: relative;
+}
+
+
+.fakta-boks.aktiv .fakta-full {
+    max-height: 700px;
+    padding: 35px;
+    padding-top: 10px;
+}
+
+
+.fakta-full button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+}
+
+.fakta-full button i:hover {
+    color: #8a2be2;
+}
+
+.sirkel {
+    background: linear-gradient(to right, purple, blue);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fa-info {
+    color: white;
+    font-size: 20px;
+}
+
+.omUCL {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.turneringBildeBoks {
+    align-items: center;
+    height: 500px;
+    width: 450px;
+    margin: 30px;
 }
