--- a/css/quiz.css
+++ b/css/quiz.css
@@ -15,10 +15,13 @@ body {
     box-shadow: 0 0 10px black;
 }
 
-h4 {
+h6 {
     text-align: center;
     font-size: 40px;
     margin-bottom: 30px;
+    background: linear-gradient(to right, purple, blue);
+    background-clip: text;
+    color: transparent;
 }
 
 button {
