--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,13 @@
 img {
     width: 100%;
 }
+
 body {
     font-family: "oswald", sans-serif;
 }
+
 /* main */
-main {
+.index>main {
     height: 100vh;
     width: 100vw;
     background-color: black;
@@ -41,26 +43,27 @@ main {
     border-radius: 15px;
 }
 
-h1{
-  font-family: 'Playfair Display', serif;
-  font-size: 1.7rem;
-  color: white;
-  text-align: center;
-  text-shadow: 2px 2px 8px black;
-  z-index: 100;
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.7rem;
+    color: white;
+    text-align: center;
+    text-shadow: 2px 2px 8px black;
+    z-index: 100;
 
 }
 
 .gerrard {
-  font-family: 'Dancing Script', sans-serif;
-  font-size: 1.3rem;
-  color: rgb(181, 181, 181);
-  text-align: center;
-  margin-top: 10px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  z-index: 100;
+    font-family: 'Dancing Script', sans-serif;
+    font-size: 1.3rem;
+    color: rgb(181, 181, 181);
+    text-align: center;
+    margin-top: 10px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    z-index: 100;
 }
+
 .topptekst {
     position: absolute;
     display: flex;
