--- a/css/side.css
+++ b/css/side.css
@@ -60,7 +60,7 @@ h3 {
 .sesonginfo h2 {
     margin-top: 20px;
     font-size: 24px;
-    color: #fff;
+    color: white;
 }
 
 .sesonginfo p {
@@ -76,7 +76,7 @@ h3 {
 
 .turneringBildeBoks {
     align-items: center;
-    height: 370px;
+    max-height: 370px;
     width: auto;
     margin: 30px;
     border-radius: 15px;
@@ -85,13 +85,13 @@ h3 {
 .spillerInfo {
     display: flex;
     flex-direction: column;
+    align-items: center;
     border: 4px solid goldenrod;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
 h4 {
     color: goldenrod;
-    text-align: center;
     font-size: 40px;
 }
 
