--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,14 @@ img {
 body {
     font-family: "oswald", sans-serif;
 }
-
+.bakgrunnsbilde{
+  background-image: url('../bilder/Hoofdfoto-Champions-League.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%; 
+  position: absolute;
+}
 /* main */
 .index>main {
     height: 100vh;
@@ -151,4 +158,104 @@ h1 {
 
 .dropdown.vis #pil {
     transform: rotate(-90deg);
+}
+
+/* responsive */
+
+@media screen and (max-width: 768px) {
+    #image-track {
+        position: static;
+        transform: none !important;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        padding: 20px 0px
+    }
+
+    #image-track>.image {
+        width: 90vw;
+        height: auto;
+        object-fit: contain;
+        object-position: center;
+    }
+
+    .index>main {
+        height: auto;
+        overflow: visible;
+    }
+
+    .topptekst {
+        position: static;
+        padding: 20px;
+        align-items: center;
+        text-align: center;
+    }
+
+    .topptekst h1 {
+        font-size: 2.7rem;
+        padding: 0 10px;
+    }
+    .bakgrunnsbilde{
+        display: none;
+    }
+    /* burgermeny */
+    .indexBurger {
+        top: 3%;
+        right: 2%;
+    }
+
+    .fa-solid {
+        font-size: 40px;
+    }
+
+    #clMeny {
+        right: 5%;
+        top: 60px;
+        width: 250px;
+        max-width: 90%;
+        padding: 15px;
+        font-size: 14px;
+
+    }
+
+    #clMeny a {
+        font-size: 14px;
+        padding: 5px 0;
+    }
+
+    .sesongListe {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .sesongListe a {
+        width: 100%;
+        padding: 5px 0;
+    }
+}
+ @media screen and (min-width: 769px) and (max-width: 1100px) {
+    .topptekst {
+        gap: 10px;
+        padding: 10px;
+    }
+
+    .topptekst h1 {
+        font-size: 1.3rem;
+        max-width: 90vw;
+        background-color: rgb(1, 43, 167);
+        padding: 10px;
+    }
+    .gerrard {
+        font-size: 1.4rem;
+    }
+
+    .bakgrunnsbilde{
+     background-image: url(../bilder/bakgrunn-mindre.jpg);
+    }
+    .fa-solid {
+        font-size: 40px;
+        color: blueviolet;
+    }
 }
