--- a/css/style.css
+++ b/css/style.css
@@ -101,13 +101,14 @@ h1 {
 }
 
 #clMeny {
-    display: none;
+    display: none !important;
     position: absolute;
     top: 7%;
     right: 7%;
     background-color: rgba(0, 0, 50, 0.9);
     padding: 10px 20px;
     border-radius: 10px;
+    display: flex;
     flex-direction: column;
     gap: 10px;
     z-index: 100;
