--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ h1 {
 
 /* responsive */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px){
     #image-track {
         position: static;
         transform: none !important;
@@ -260,5 +260,14 @@ h1 {
     .indexBurger{
         z-index: 100;
         position: absolute;
+    }
+}
+@media screen and (max-width: 649px) {
+    .topptekst h1 {
+        font-size: 1.5rem;
+        padding: 0 10px;
+    }
+    .fa-solid {
+        font-size: 30px;
     }
 }
