--- a/css/side.css
+++ b/css/side.css
@@ -79,7 +79,7 @@ h3 {
     background-color: rgba(0, 0, 0, 0.5);
     margin: 15px;
     border-radius: 15px;
-    max-width: 600px;
+    max-width: fit-content;
     border: 2px solid blueviolet;
 }
 
@@ -229,7 +229,7 @@ h5 {
     }
 
     .sesonginfo {
-        max-width: 730px;
+        max-width: fit-content;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -238,6 +238,7 @@ h5 {
         height: auto;
         padding: 20px;
         gap: 20px;
+        margin: 20px;
     }
 
     .spillerInfo {
@@ -263,5 +264,53 @@ h5 {
         height: 60%;
         width: 60%;
     }
+    h5{
+         font-size: 2rem;
+    }
 
+}
+@media screen and (max-width: 767px) {
+    h3{
+        font-size: 3rem;
+    }
+    h5{
+        font-size: 1.5rem;
+    }
+    .fa-solid {
+        font-size: 40px;
+    }
+        .sesonginfo{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 649px){
+    h3{
+        font-size: 2.2rem;
+    }
+    .fa-solid {
+        font-size: 30px;
+    }
+    h5{
+        font-size: 1.12em;
+    }
+}
+
+@media screen and (max-width: 480px){
+    h3{
+        font-size: 1.7rem;
+    }
+    .fa-solid {
+        font-size: 25px;
+    }
+    h5{
+        font-size: 1rem;
+    }
+    h4{
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 390px){
+    .sesonginfo{
+        max-width: 330px;
+    }
 }
