--- a/css/side.css
+++ b/css/side.css
@@ -293,6 +293,9 @@ h5 {
     h5{
         font-size: 1.12em;
     }
+    .sesonginfo{
+        max-width: fit-content;
+    }
 }
 
 @media screen and (max-width: 480px){
@@ -310,7 +313,7 @@ h5 {
     }
 }
 @media screen and (max-width: 390px){
-    .sesonginfo{
-        max-width: 330px;
+    h4{
+        font-size: 1.6rem;
     }
 }
